# actions

.github/: dependabot.yml
.github/actions/docker_action/: action.yaml  entrypoint.sh
.github/actions/install_deps/: action.yaml
.github/workflows/: bump_libs.yaml  composite.yaml  contains.yaml  docker_action.yaml  docker_to_ghcr.yaml  docker_uv.yaml  environment.yaml  inputs.yaml  main.yml  messages.yML  messages.yaml  pipuv.yaml  python_version.yaml  setup_uv.yaml  shar_vars_jobs.yaml  share_vars_jobs  update_var.yaml  uv.yaml  vars_and_context.yaml
.workflow/: cache.yaml
.workflows/: cache.yaml
Workflows/: cache.yaml
src/: Dockerfile  main.py  pyproject.toml
