[project]
name = "testproj"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "aws-cdk-lib",
    "requests",
    "python-dotenv",
    "numpy",
    "hydra-core",
    "streamlit",
    "pytest",
    "pandas",
    "constructs",
    "pynvml",
    "torchvision==0.16.1",
    "torch==2.1.1",
    "scikit-image",
    "transformers",
    "diffusers",
    "safetensors",
    "xformers"
]
